# src/main/java/com/elpidoroun/financialportfolio/controller/converters/PaymentTypeConverter.java
@@ -1,0 +1,23 @@
+package com.elpidoroun.financialportfolio.controller.converters;
+
+import com.elpidoroun.financialportfolio.model.PaymentType;
+import com.elpidoroun.financialportfolio.generated.dto.PaymentTypeDto;
+
+public class PaymentTypeConverter {
+
+    public static PaymentTypeDto toDto(PaymentType paymentType){
+        return switch (paymentType) {
+            case YEARLY -> PaymentTypeDto.YEARLY;
+            case MONTHLY -> PaymentTypeDto.MONTHLY;
+            default -> throw new RuntimeException("asd");
+        };
+    }
+
+    public static PaymentType toDomain(PaymentTypeDto paymentTypeDto){
+        return switch (paymentTypeDto) {
+            case MONTHLY -> PaymentType.MONTHLY;
+            case YEARLY -> PaymentType.YEARLY;
+            default -> throw new RuntimeException("asd");
+        };
+    }
+}
